--- a/frontend/kanji-reader-app/src/MainPage/Kanji/ManualSelection/KanjiItem.css
+++ b/frontend/kanji-reader-app/src/MainPage/Kanji/ManualSelection/KanjiItem.css
@@ -5,13 +5,12 @@
   padding: 8px;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
-  background-color: white;
   transition: all 0.2s ease;
   color: black !important
 }
 
 .individual-kanji-item:hover {
-  background-color: #f5f5f5;
+  background-color: #4a4a4a;
   border-color: #FF9800;
 }
 
