--- a/frontend/kanji-reader-app/src/MainPage/Kanji/UserKanji.css
+++ b/frontend/kanji-reader-app/src/MainPage/Kanji/UserKanji.css
@@ -54,6 +54,23 @@
   min-width: fit-content;
 }
 
+.refresh-cache-button {
+  color: #FF9800 !important;
+  border-color: #FF9800 !important;
+  padding: 6px 12px !important;
+  font-weight: 500 !important;
+  text-transform: none !important;
+  border-radius: 6px !important;
+  font-size: 0.875rem !important;
+  margin-top: 30px !important;
+  text-transform: capitalize !important;
+}
+
+.refresh-cache-button:hover {
+  background-color: #251d18 !important;
+  border-color: #ffa726 !important;
+}
+
 .userkanji-count {
   color: orange !important;
   font-weight: 400 !important;
