--- a/frontend/kanji-reader-app/src/MainPage/Kanji/ManualSelection/ManualKanjiSelection.css
+++ b/frontend/kanji-reader-app/src/MainPage/Kanji/ManualSelection/ManualKanjiSelection.css
@@ -125,3 +125,9 @@
 .manual-kanji-container .MuiFormControlLabel-root .MuiFormControlLabel-label {
   color: #ffffff;
 } 
+
+@media (max-width: 730px) {
+  .manual-kanji-container {
+    width:fit-content
+  }
+}
