--- a/frontend/kanji-reader-app/src/MainPage/Kanji/UserKanji.css
+++ b/frontend/kanji-reader-app/src/MainPage/Kanji/UserKanji.css
@@ -35,7 +35,6 @@
 }
 
 .userkanji-yourkanji {
-  font-family: "Inter", sans-serif !important;
   font-weight: 300 !important;
   font-style: italic;
   text-decoration: underline;
@@ -122,7 +121,7 @@
 }
 
 .wanikani-stages-link {
-  color: rgb(174, 138, 220) !important;
+  color: #ae8adc !important;
   text-decoration: underline;
   font-weight: 500;
   cursor: pointer;
@@ -141,7 +140,7 @@
 }
 
 .change-token-link {
-  color: rgb(174, 138, 220) !important;
+  color: #ae8adc !important;
   text-decoration: underline;
   font-weight: 500;
   cursor: pointer;
